kubernetes/apps/deconz/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deconz
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  labels:
    # Direct GPIO UART access requires a privileged container.
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
