kubernetes/apps/deconz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deconz
  namespace: deconz
spec:
  selector:
    app.kubernetes.io/name: deconz
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: websocket
      port: 8443
      targetPort: websocket
      protocol: TCP
